<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.fxly.reboot.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            android:layout_weight="2"
            >
            <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:text="@string/restart_to_power"-->

                <!--android:gravity="center_vertical|center_horizontal"-->
                <!--/>-->
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                >
                <TextView
                    android:id="@+id/restart_count_running"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/text_maxsize"
                    android:textSize="@dimen/text_settings_size"
                    android:text="@string/restart_count_running"
                    android:gravity="center_vertical|left"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical|center_horizontal"
                    android:background="@color/aquamarine"
                    >
                    <TextView
                        android:id="@+id/remaining_count_running"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:textSize="@dimen/text_maxsize"

                        android:text="@string/remaining_count_running_count"
                        android:gravity="center_vertical|center_horizontal"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_marginLeft="@dimen/fab_margin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="times"
                        />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="3"
                >
                <TextView
                    android:id="@+id/setttings_count_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/text_maxsize"
                    android:text="@string/settings_count_number"
                    android:gravity="center_vertical|right"

                    />
            </LinearLayout>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="2"
            ></LinearLayout>
    </LinearLayout>
</RelativeLayout>
