<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.fxly.reboot.AboutActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="5"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal|center_vertical"
                >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@mipmap/power_restart"
                android:layout_gravity="center_horizontal|center_vertical"
                />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                     android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/control_bar"
                     android:textSize="@dimen/text_settings_size"
                    android:text="@string/app_name"
                    android:textStyle="bold"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/app_verison"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/app_name"
                android:layout_marginRight="@dimen/text_padding"
                android:layout_marginBottom="@dimen/button_margin"
                android:gravity="right|center_vertical"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lavender"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            >

        </View>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"

                    >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@drawable/shape_settings"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/text_settings_size"
                        android:text="@string/about_text"
                        />


                    </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"

                    android:orientation="vertical"
                    android:background="@drawable/shape_settings"
                    android:layout_marginTop="@dimen/abc_control_inset_material" >


                    <!--github-->
                    <LinearLayout
                        android:id="@+id/about_github"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/abc_action_bar_overflow_padding_end_material"
                        android:gravity="center_vertical"
                        android:padding="@dimen/layout_vertical_margin_small" >
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/github_icon"
                            android:textSize="@dimen/text_size" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="fxlysm/reboot"
                            android:layout_marginLeft="@dimen/settings_panding"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size" />

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right" >

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@mipmap/right_arrow"
                                android:textSize="@dimen/text_size" />
                        </LinearLayout>

                    </LinearLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/line_height"
                        android:background="@color/light_gray" />

                    <!--开发者-->
                    <LinearLayout
                        android:id="@+id/about_qq"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/abc_action_bar_overflow_padding_end_material"
                        android:gravity="center_vertical"
                        android:padding="@dimen/layout_vertical_margin_small" >

                        <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/qq_icon_button"
                        android:textSize="@dimen/text_size" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/settings_panding"
                            android:layout_centerVertical="true"
                            android:text="@string/about_qq"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size" />

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right" >

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@mipmap/right_arrow"
                                android:textSize="@dimen/text_size" />
                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/line_height"
                        android:background="@color/light_gray" />





                    <!--开发者-->
                    <LinearLayout
                        android:id="@+id/about_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/abc_action_bar_overflow_padding_end_material"
                        android:gravity="center_vertical"
                        android:padding="@dimen/layout_vertical_margin_small" >
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@android:drawable/sym_action_email"
                            android:textSize="@dimen/text_size" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/about_email"
                            android:layout_marginLeft="@dimen/settings_panding"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size" />

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right" >

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@mipmap/right_arrow"
                                android:textSize="@dimen/text_size" />
                        </LinearLayout>

                    </LinearLayout>



                </LinearLayout>
                </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    </ScrollView>
</RelativeLayout>
